--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
   <!-- Header & Navigation -->
   <header>
-    <div class="logo"><img src="img/logo a.PNG" alt="" width="50px" height="30px" > Asmapire collection</div>
+    <div class="logo"><img src="logo a.PNG" alt="" width="50px" height="30px" > Asmapire collection</div>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav id="nav">
       <a href="index.html">Accueil</a>
@@ -175,18 +175,18 @@
   <!-- Produits -->
   <section id="articles" class="product-section">
     <div class="product-card">
-      <img src="img/P3.jpg" alt="Veste"width="50px" height="200px">
+      <img src="P3.jpg" alt="Veste"width="50px" height="200px">
       <h3>Veste Classique</h3>
       <p>Confort et élégance au quotidien.</p>
     </div>
     <div class="product-card">
-      <img src="img/V1.jpg" alt="Chemise"width="50px" height="200px">
+      <img src="V1.jpg" alt="Chemise"width="50px" height="200px">
       <h3>Chemise Blanche</h3>
 
       <p>Indispensable pour toutes les occasions.</p>
     </div>
     <div class="product-card">
-      <img src="img/S1.jpg" alt="Souliers"width="50px" height="200px">
+      <img src="S1.jpg" alt="Souliers"width="50px" height="200px">
       <h3>Souliers Cuir</h3>
       <p>Finition haut de gamme et confort optimal.</p>
     </div>
