--- a/menu1.html
+++ b/menu1.html
@@ -117,7 +117,7 @@
   <main class="container">
     <!-- Article 1 -->
     <div class="card">
-      <img src="img/V1.jpg" alt="vestes">
+      <img src="V1.jpg" alt="vestes">
       <h3>vestes</h3>
       <p>Pointure: XL</p>
       <p>Prix: 59.99€</p>
@@ -126,7 +126,7 @@
 
     <!-- Article 2 -->
     <div class="card">
-      <img src="img/V2.jpg" alt="Chaussure 2">
+      <img src="V2.jpg" alt="Chaussure 2">
       <h3>Veste classique</h3>
       <p>Pointure: L</p>
       <p>Prix: 69.99€</p>
@@ -135,81 +135,81 @@
 
     <!-- Article 3 -->
     <div class="card">
-      <img src="img/V1.jpg" alt="Chaussure 3">
+      <img src="V1.jpg" alt="Chaussure 3">
       <h3>Veste classique</h3>
       <p>Pointure: XL</p>
       <p>Prix: 49.99€</p>
       <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
     </div>
     <div class="card">
-        <img src="img/P1.jpg" alt="Chaussure 3">
+        <img src="P1.jpg" alt="Chaussure 3">
         <h3>Veste classique</h3>
         <p>Pointure: XXL</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/V7.jpg" alt="Chaussure 3">
+        <img src="V7.jpg" alt="Chaussure 3">
         <h3>Veste classique</h3>
         <p>Pointure: XXL</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div><div class="card">
-        <img src="img/P3.jpg" alt="Chaussure 3">
+        <img src="P3.jpg" alt="Chaussure 3">
         <h3>Veste classique</h3>
         <p>Pointure: XL</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div><div class="card">
-        <img src="img/V6.jpg" alt="Chaussure 3">
+        <img src="V6.jpg" alt="Chaussure 3">
         <h3>Veste classique</h3>
         <p>Pointure: XXL</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div><div class="card">
-        <img src="img/P3.jpg" alt="Chaussure 3">
+        <img src="P3.jpg" alt="Chaussure 3">
         <h3>Veste classique</h3>
         <p>Pointure: XL</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/P1.jpg" alt="Chaussure 3">
+        <img src="P1.jpg" alt="Chaussure 3">
         <h3>Veste classique</h3>
         <p>Pointure: 40</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/S1.jpg" alt="Chaussure 3">
+        <img src="S1.jpg" alt="Chaussure 3">
         <h3>Chaussure Classique</h3>
         <p>Pointure: 40</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/S2.jpg" alt="Chaussure 3">
+        <img src="S2.jpg" alt="Chaussure 3">
         <h3>Chaussure Classique</h3>
         <p>Pointure: 40</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/S3.jpg" alt="Chaussure 3">
+        <img src="S3.jpg" alt="Chaussure 3">
         <h3>Chaussure Classique</h3>
         <p>Pointure: 40</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/S4.jpg" alt="Chaussure 3">
+        <img src="S4.jpg" alt="Chaussure 3">
         <h3>Chaussure Classique</h3>
         <p>Pointure: 40</p>
         <p>Prix: 49.99€</p>
         <button class="btn" onclick="ajouterCommande('Chaussure Classique - 40 - 49.99€')">Ajouter</button>
       </div>
       <div class="card">
-        <img src="img/S6.jpg" alt="Chaussure 3">
+        <img src="S6.jpg" alt="Chaussure 3">
         <h3>fleur</h3>
         <p>Pointure: 40</p>
         <p>Prix: 49.99€</p>
