--- a/contact.html
+++ b/contact.html
@@ -150,8 +150,8 @@
   <!-- Section Témoignages -->
   <section class="testimonials-section">
     <div class="testimonial-card">
-        <img src="img/mr D (2).PNG" alt=""width="200px" height="100px">
-      <h3>Ibrahima sory kaba </h3>
+        <img src="mr D (2).PNG" alt=""width="200px" height="100px">
+      <h3>Aboubacar Doumbouyah</h3>
       <p>jurist</p>
       <p>“Une expérience exceptionnelle, un service client à l’écoute et un site magnifique. Je recommande à 100 % !”</p>
     </div>
